# vtx-coding-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  measure_tools.py  pyproject.toml  test_supercode_loop.py  ty.toml
Site/: .env.example  index.html  metadata.json  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  server.ts  vite.config.ts
assets/: DocsPage-Bf_LTEk-.js  DocsPage-Bn5BGtHg.js  FeaturesPage-B2OD-P63.js  FeaturesPage-BnenYhEC.js  index-B5Ktb-mM.js  index-DO93yW3H.css  index-MWM8mEFW.js
docs/: README.md  agents.md  architecture.md  configuration.md  development.md  e2e-test-coverage-review.md  extensions.md  goal.md  headless.md  hooks.md  index.html  local-models.md  permissions.md  providers.md  sessions.md  skills.md  storage-layout.md  theming.md  tools.md  ui.md
features/: index.html
scripts/: install.ps1  install.sh  show_themes.py  supercode_proxy.py
src/vtx_claw/: README.md  __init__.py  __main__.py  _vtx_bridge.py  agent.py  cli.py  concurrency.py  config_base.py  daemon.py  events.py  memory.py  onboard.py  persona.py  pyproject.toml  runtime.py  sessions.py  ui.py  version.py  voice.py  vtx_claw.py  web_ui.py
src/vtx_claw/agent/: __init__.py  _vtx_agent.py  autocompact.py  context.py  context_governance.py  cron_turns.py  hook.py  loop.py  memory.py  model_presets.py  progress_hook.py  prompts.py  runner.py  skills.py  subagent.py  vtx_adapter.py
src/vtx_claw/agent/features/: __init__.py  claw_tool.py
src/vtx_claw/agent/tools/: __init__.py  apply_patch.py  base.py  cli_apps.py  context.py  cron.py  exec_session.py  file_state.py  filesystem.py  image_generation.py  loader.py  long_task.py  mcp.py  message.py  path_utils.py  registry.py  sandbox.py  schema.py  search.py  self.py  shell.py  spawn.py  web.py
src/vtx_claw/api/: __init__.py  server.py
src/vtx_claw/apps/: __init__.py  protocol.py
src/vtx_claw/apps/cli/: __init__.py  service.py  utils.py
src/vtx_claw/audio/: __init__.py  transcription.py  transcription_registry.py
src/vtx_claw/auth/: __init__.py  accounts.py  allowlist.py  policies.py
src/vtx_claw/bus/: __init__.py  progress.py  queue.py  runtime_events.py
src/vtx_claw/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  msteams.py  napcat.py  qq.py  registry.py  signal.py  signal_irc.py  slack.py  telegram.py  web.py  websocket.py  wecom.py  weixin.py  whatsapp.py
src/vtx_claw/cli/: __init__.py  commands.py  gateway.py  models.py  onboard.py  stream.py
src/vtx_claw/command/: __init__.py  builtin.py  router.py
src/vtx_claw/config/: __init__.py  defaults.yml  loader.py  paths.py  schema.py
src/vtx_claw/cron/: __init__.py  bound_runner.py  jobs.py  scheduler.py  service.py  session_delivery.py  session_turns.py  webui_metadata.py
src/vtx_claw/gateway/: __init__.py  channel_manager.py  middleware.py  runtime.py  server.py  service.py
src/vtx_claw/infra/: __init__.py  dedup.py  delivery_queue.py  heartbeat.py  retry.py
src/vtx_claw/knowledge/: __init__.py
src/vtx_claw/pairing/: __init__.py  store.py
src/vtx_claw/prompts/: __init__.py  builder.py  identity.py
src/vtx_claw/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  bedrock_provider.py  factory.py  fallback_provider.py  github_copilot_provider.py  image_generation.py  openai_codex_provider.py  openai_compat_provider.py  registry.py  transcription.py
src/vtx_claw/providers/openai_responses/: __init__.py  converters.py  parsing.py
src/vtx_claw/sandbox/: __init__.py  docker.py
src/vtx_claw/sdk/: __init__.py  clients.py  runtime.py  streaming.py  types.py
src/vtx_claw/security/: network.py  workspace_access.py  workspace_policy.py
src/vtx_claw/session/: __init__.py  goal_state.py  manager.py  turn_continuation.py  webui_turns.py
src/vtx_claw/skills/: README.md  __init__.py  loader.py  marketplace.py  registry.py
src/vtx_claw/skills/clawhub/: SKILL.md
src/vtx_claw/skills/cron/: SKILL.md
src/vtx_claw/skills/github/: SKILL.md
src/vtx_claw/skills/image-generation/: SKILL.md
src/vtx_claw/skills/long-goal/: SKILL.md
src/vtx_claw/skills/skill-creator/: SKILL.md
src/vtx_claw/skills/skill-creator/scripts/: init_skill.py  quick_validate.py
src/vtx_claw/skills/summarize/: SKILL.md
src/vtx_claw/skills/tmux/: SKILL.md
src/vtx_claw/skills/tmux/scripts/: find-sessions.sh
src/vtx_claw/skills/update-setup/: SKILL.md
src/vtx_claw/skills/weather/: SKILL.md
src/vtx_claw/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
src/vtx_claw/templates/agent/: evaluator.md  identity.md  subagent_system.md  tool_contract.md
src/vtx_claw/templates/memory/: MEMORY.md
src/vtx_claw/tools/: __init__.py
src/vtx_claw/tools/mcp/: __init__.py  cache.py  capabilities.py  client.py  config.py  lifecycle.py  proxy_tool.py  registry.py
src/vtx_claw/utils/: __init__.py  artifacts.py  document.py  evaluator.py  file_edit_events.py  gitstore.py  helpers.py  llm_runtime.py  media_decode.py  progress_events.py  prompt_templates.py  restart.py  runtime.py  tool_hints.py
src/vtx_claw/webui/: __init__.py  cli_apps_api.py  file_preview.py  forking.py  gateway_services.py  gateway_tokens.py  http_utils.py  mcp_presets_api.py  mcp_presets_runtime.py  media_api.py  media_gateway.py  session_automations.py  session_list_index.py  settings_api.py  settings_routes.py  sidebar_state.py  skills_api.py  thread_disk.py  token_usage.py  transcript.py  transcription_ws.py  version_check.py  websocket_logging.py  workspaces.py  ws_http.py
tests/: conftest.py  test_agent_profiles.py  test_agent_profiles_runtime.py  test_agent_profiles_tui.py  test_agentic_loop.py  test_cli.py  test_cli_auth_flags.py  test_cli_provider_resolution.py  test_compaction.py  test_config_binaries.py  test_config_error_fallback.py  test_config_injection.py  test_config_migration.py  test_dynamic_auth.py  test_dynamic_models.py  test_errors.py  test_extensions.py  test_git_branch.py  test_goal.py  test_grep_tool.py  test_handoff.py  test_handoff_link_interrupt.py  (+26 more)
(+909 files in other folders)
