[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtx"]

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[project]
name = "vtx-coding-agent"
version = "0.1.7"
description = "Minimalist coding agent harness with a Textual TUI and headless CLI. <1k-token system prompt, 18+ LLM providers, AGENTS.md + skills context, session tree, prompt/auto permissions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "anthropic>=0.79.0",
    "curl-cffi>=0.15.0",
    "ddgs>=9.0.0",
    "html-to-markdown>=3.3.0,<3.4.0",
    "lxml-html-clean>=0.4.3",
    "openai>=2.21.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "readability-lxml>=0.8.4",
    "rich>=14.3.2",
    "textual>=8.0.0",
]

[dependency-groups]
dev = [
 "pyright>=1.1.408",
 "pytest>=9.0.2",
 "pytest-asyncio>=1.3.0",
 "ruff>=0.15.8",
 "twine>=5.1.1",
]

[project.scripts]
vtx = "vtx.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"src/vtx/ui/latex.py" = ["RUF001"]
"src/vtx/prompts/identity.py" = ["E501"]
"src/vtx/prompts/env.py" = ["E501"]
"src/vtx/sdk/**/*.py" = ["N818"]
"tests/ui/test_latex.py" = ["RUF001"]
"tests/sdk/**/*.py" = ["N818", "E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
