[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtx", "src/vtx_claw"]

[tool.hatch.build]
artifacts = []

[tool.uv]
package = true
override-dependencies = [
    "aiofiles>=25.1.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[project]
name = "vtx-coding-agent"
version = "0.2.0"
description = "Minimalist coding agent harness with a Textual TUI and headless CLI. <1k-token system prompt, 18+ LLM providers, AGENTS.md + skills context, session tree, prompt/auto permissions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "anthropic>=0.79.0",
    "boto3>=1.43.0",
    "chardet>=3.0.2,<6.0.0",
    "croniter>=6.0.0,<7.0.0",
    "curl-cffi>=0.15.0",
    "ddgs>=9.5.5,<10.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "dulwich>=0.22.0,<1.0.0",
    "filelock>=3.25.2",
    "hammett>=0.10.0",
    "html-to-markdown>=3.3.0,<3.4.0",
    "httpx>=0.28.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "loguru>=0.7.3,<1.0.0",
    "lxml-html-clean>=0.4.3",
    "mcp>=1.28.1",
    "msgpack>=1.1.0,<2.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "openai>=2.21.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pillow>=12.1.1",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pydantic>=2.12.5",
    "pypdf>=5.0.0,<6.0.0",
    "pytest-xdist>=3.8.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "python-socketio>=5.16.0,<6.0.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0; sys_platform != 'win32'",
    "python-telegram-bot[socks,webhooks]>=22.6,<23.0",
    "pyyaml>=6.0.3",
    "qq-botpy>=1.2.0,<2.0.0",
    "questionary>=2.0.0,<3.0.0",
    "readability-lxml>=0.8.4",
    "rich>=14.3.2",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "socksio>=1.0.0,<2.0.0",
    "textual>=8.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "typer>=0.20.0,<1.0.0",
    "websocket-client>=1.9.0,<2.0.0",
    "websockets>=16.0,<17.0",
]

[project.optional-dependencies]
api = [
    "aiohttp>=3.9.0,<4.0.0",
]
azure = [
    "azure-identity>=1.19.0,<2.0.0",
]
wecom = [
    "wecom-aibot-sdk-python>=0.1.5",
]
weixin = [
    "qrcode[pil]>=8.0",
    "pycryptodome>=3.20.0",
]
msteams = [
    "PyJWT>=2.0,<3.0",
    "cryptography>=41.0",
]
matrix = [
    "matrix-nio[e2e]>=0.25.2; sys_platform != 'win32'",
    "aiohttp>=3.9.0,<4.0.0",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]
discord = [
    "discord.py>=2.5.2,<3.0.0",
]
whatsapp = [
    "neonize>=0.3.18.post0,<0.4.0",
    "segno>=1.6.1,<2.0.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
pdf = [
    "pymupdf>=1.25.0",
]
olostep = [
    "olostep>=0.1.0",
]

[dependency-groups]
dev = [
 "pyright>=1.1.408",
 "pytest>=9.0.2",
 "pytest-asyncio>=1.3.0",
 "ruff>=0.15.8",
 "twine>=5.1.1",
]

[project.scripts]
vtx = "vtx.cli:main"
vtx-claw = "vtx_claw.cli.commands:app"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"src/vtx/ui/latex.py" = ["RUF001"]
"src/vtx/prompts/identity.py" = ["E501"]
"src/vtx/prompts/env.py" = ["E501"]
"src/vtx/sdk/**/*.py" = ["N818"]
"tests/ui/test_latex.py" = ["RUF001"]
"tests/sdk/**/*.py" = ["N818", "E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
