[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtx", "src/vtx_claw"]

[tool.hatch.build]
artifacts = []

[tool.uv]
package = true
override-dependencies = [
    "aiofiles>=25.1.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[project]
name = "vtx-coding-agent"
version = "0.2.4"
description = "Minimalist coding agent harness with a Textual TUI and headless CLI. Ships two agentic backends: the native vtx event loop and the advanced vtx-claw gateway loop (install the [claw] extra for multi-channel + subagent + cron features). <1k-token system prompt, 50+ LLM providers, AGENTS.md + skills context, session tree, prompt/auto permissions."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["coding-agent", "tui", "cli", "llm", "agent-loop", "vtx-claw"]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "anthropic>=0.79.0",
    "chardet>=3.0.2,<6.0.0",
    "curl-cffi>=0.15.0",
    "dulwich>=0.22.0,<1.0.0",
    "filelock>=3.25.2",
    "hammett>=0.10.0",
    "html-to-markdown>=3.3.0,<3.4.0",
    "httpx>=0.28.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "lxml-html-clean>=0.4.3",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "openai>=2.21.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pillow>=12.1.1",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "pydantic>=2.12.5",
    "pypdf>=5.0.0,<6.0.0",
    "pytest-xdist>=3.8.0",
    "python-docx>=1.1.0,<2.0.0",
    "python-pptx>=1.0.0,<2.0.0",
    "pyyaml>=6.0.3",
    "questionary>=2.0.0,<3.0.0",
    "readability-lxml>=0.8.4",
    "rich>=14.3.2",
    "textual>=8.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "typer>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
api = [
    "aiohttp>=3.9.0,<4.0.0",
]
azure = [
    "azure-identity>=1.19.0,<2.0.0",
]
wecom = [
    "wecom-aibot-sdk-python>=0.1.5",
]
weixin = [
    "qrcode[pil]>=8.0",
    "pycryptodome>=3.20.0",
]
msteams = [
    "PyJWT>=2.0,<3.0",
    "cryptography>=41.0",
]
matrix = [
    "matrix-nio[e2e]>=0.25.2; sys_platform != 'win32'",
    "aiohttp>=3.9.0,<4.0.0",
    "mistune>=3.0.0,<4.0.0",
    "nh3>=0.2.17,<1.0.0",
]
discord = [
    "discord.py>=2.5.2,<3.0.0",
]
whatsapp = [
    "neonize>=0.3.18.post0,<0.4.0",
    "segno>=1.6.1,<2.0.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
pdf = [
    "pymupdf>=1.25.0",
]
olostep = [
    "olostep>=0.1.0",
]
# vtx_claw advanced gateway backend dependencies. These are not needed for
# the core `vtx` TUI / headless CLI; install them only when using the
# `vtx-claw` multi-channel gateway, WebUI, cron, MCP, or subagent features.
claw = [
    "boto3>=1.43.0",
    "croniter>=6.0.0,<7.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "mcp>=1.28.1",
    "msgpack>=1.1.0,<2.0.0",
    "python-socketio>=5.16.0,<6.0.0",
    "python-telegram-bot[socks,webhooks]>=22.6,<23.0",
    "python-socks[asyncio]>=2.8.0,<3.0.0; sys_platform != 'win32'",
    "qq-botpy>=1.2.0,<2.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "socksio>=1.0.0,<2.0.0",
    "websocket-client>=1.9.0,<2.0.0",
    "websockets>=16.0,<17.0",
]

[dependency-groups]
dev = [
 "pyright>=1.1.408",
 "pytest>=9.0.2",
 "pytest-asyncio>=1.3.0",
 "ruff>=0.15.8",
 "twine>=5.1.1",
]

[project.scripts]
vtx = "vtx.cli:main"
vtx-claw = "vtx_claw.cli.commands:app"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"src/vtx/ui/latex.py" = ["RUF001"]
"src/vtx/prompts/identity.py" = ["E501"]
"src/vtx/prompts/env.py" = ["E501"]
"src/vtx/sdk/**/*.py" = ["N818"]
"tests/ui/test_latex.py" = ["RUF001"]
"tests/sdk/**/*.py" = ["N818", "E501"]

# Pre-existing lint debt: targeted, rule-specific ignores mirroring each file's
# current violations. No functional behavior changed; new code is still linted
# for every other rule. Resolves incrementally upstream.
"scripts/supercode_proxy.py" = ["B904"]
"src/claw/tests/agent/test_auto_compact.py" = ["E501"]
"src/claw/tests/agent/test_consolidator.py" = ["E501"]
"src/claw/tests/agent/test_context_builder.py" = ["E501"]
"src/claw/tests/agent/test_git_store.py" = ["E741"]
"src/claw/tests/agent/test_loop_runner_integration.py" = ["E501", "N806"]
"src/claw/tests/agent/test_loop_save_turn.py" = ["RUF001"]
"src/claw/tests/agent/test_memory_store.py" = ["E501", "RUF001"]
"src/claw/tests/agent/test_onboard_logic.py" = ["E501", "UP045"]
"src/claw/tests/agent/test_runner_core.py" = ["E501"]
"src/claw/tests/agent/test_runner_fallback.py" = ["E501", "RUF043"]
"src/claw/tests/agent/test_runner_governance.py" = ["E501"]
"src/claw/tests/agent/test_runner_reasoning.py" = ["E501"]
"src/claw/tests/agent/test_session_atomic.py" = ["SIM117"]
"src/claw/tests/agent/test_session_manager_history.py" = ["RUF001"]
"src/claw/tests/agent/test_stop_preserves_context.py" = ["N806"]
"src/claw/tests/agent/test_tool_hint.py" = ["E501"]
"src/claw/tests/agent/test_tool_loader_entrypoints.py" = ["RUF012"]
"src/claw/tests/agent/test_tool_loader_scopes.py" = ["RUF012"]
"src/claw/tests/agent/test_unified_session.py" = ["E501"]
"src/claw/tests/agent/tools/test_subagent_tools.py" = ["E501"]
"src/claw/tests/channels/test_channel_plugins.py" = ["SIM117"]
"src/claw/tests/channels/test_dingtalk_channel.py" = ["E501", "RUF012"]
"src/claw/tests/channels/test_discord_channel.py" = ["RUF012"]
"src/claw/tests/channels/test_email_channel.py" = ["E501"]
"src/claw/tests/channels/test_feishu_lazy_import.py" = ["E501"]
"src/claw/tests/channels/test_feishu_reply.py" = ["E501", "SIM105"]
"src/claw/tests/channels/test_feishu_streaming.py" = ["E501"]
"src/claw/tests/channels/test_feishu_tool_hint_code_block.py" = ["RUF001", "RUF002"]
"src/claw/tests/channels/test_qq_ack_message.py" = ["RUF001"]
"src/claw/tests/channels/test_qq_channel.py" = ["SIM115"]
"src/claw/tests/channels/test_qq_media.py" = ["RUF001"]
"src/claw/tests/channels/test_telegram_channel.py" = ["E501", "RUF001", "RUF003", "RUF012"]
"src/claw/tests/channels/test_websocket_channel.py" = ["E501"]
"src/claw/tests/channels/test_websocket_envelope_media.py" = ["B017", "RUF002", "RUF003"]
"src/claw/tests/channels/test_websocket_http_routes.py" = ["E501", "RUF012"]
"src/claw/tests/channels/test_websocket_integration.py" = ["SIM117"]
"src/claw/tests/channels/test_wecom_channel.py" = ["RUF001"]
"src/claw/tests/channels/test_weixin_channel.py" = ["E501", "RUF043"]
"src/claw/tests/cli/test_cli_input.py" = ["N806"]
"src/claw/tests/cli/test_commands.py" = ["RUF006"]
"src/claw/tests/cron/test_cron_persistence.py" = ["RUF043"]
"src/claw/tests/cron/test_cron_service.py" = ["E501"]
"src/claw/tests/providers/test_azure_openai_provider.py" = ["SIM117"]
"src/claw/tests/providers/test_image_generation.py" = ["E501", "RUF043"]
"src/claw/tests/providers/test_litellm_kwargs.py" = ["E501", "N806", "RUF001"]
"src/claw/tests/providers/test_openai_responses.py" = ["RUF043"]
"src/claw/tests/providers/test_provider_retry.py" = ["E501", "RUF001"]
"src/claw/tests/test_api_attachment.py" = ["E501"]
"src/claw/tests/test_msteams.py" = ["E501", "RUF001"]
"src/claw/tests/test_tool_contextvars.py" = ["RUF012"]
"src/claw/tests/tools/test_apply_patch_tool.py" = ["E501"]
"src/claw/tests/tools/test_edit_advanced.py" = ["RUF001"]
"src/claw/tests/tools/test_exec_platform.py" = ["RUF012"]
"src/claw/tests/tools/test_image_generation_tool.py" = ["RUF012"]
"src/claw/tests/tools/test_read_enhancements.py" = ["E501"]
"src/claw/tests/tools/test_tool_validation.py" = ["RUF002"]
"src/claw/tests/tools/test_web_fetch_security.py" = ["RUF012"]
"src/claw/tests/tools/test_web_fetch_url_sanitization.py" = ["RUF012"]
"src/claw/tests/tools/test_web_search_tool.py" = ["E501"]
"src/claw/tests/utils/test_file_edit_events.py" = ["E501"]
"src/claw/tests/utils/test_searchusage.py" = ["RUF012"]
"src/claw/tests/utils/test_strip_think.py" = ["RUF001"]
"src/claw/tests/utils/test_subagent_channel_display.py" = ["E501"]
"src/vtx_claw/agent/context.py" = ["E501", "RUF012"]
"src/vtx_claw/agent/context_governance.py" = ["E501", "SIM113"]
"src/vtx_claw/agent/loop.py" = ["E501", "RUF012", "SIM102"]
"src/vtx_claw/agent/memory.py" = ["E501", "RUF012"]
"src/vtx_claw/agent/runner.py" = ["E501", "SIM102"]
"src/vtx_claw/agent/subagent.py" = ["E501"]
"src/vtx_claw/agent/tools/apply_patch.py" = ["B904", "E501", "RUF012"]
"src/vtx_claw/agent/tools/base.py" = ["B010", "E501", "RUF012"]
"src/vtx_claw/agent/tools/cli_apps.py" = ["E501", "RUF012"]
"src/vtx_claw/agent/tools/cron.py" = ["E501"]
"src/vtx_claw/agent/tools/exec_session.py" = ["E501", "RUF012"]
"src/vtx_claw/agent/tools/file_state.py" = ["E501"]
"src/vtx_claw/agent/tools/filesystem.py" = ["E501", "RUF012"]
"src/vtx_claw/agent/tools/image_generation.py" = ["E501", "N814"]
"src/vtx_claw/agent/tools/long_task.py" = ["E501"]
"src/vtx_claw/agent/tools/mcp.py" = ["E501"]
"src/vtx_claw/agent/tools/message.py" = ["B039", "E501"]
"src/vtx_claw/agent/tools/schema.py" = ["E501"]
"src/vtx_claw/agent/tools/search.py" = ["E501", "RUF012", "SIM102"]
"src/vtx_claw/agent/tools/self.py" = ["E501", "RUF012"]
"src/vtx_claw/agent/tools/shell.py" = ["E501", "RUF012", "SIM112"]
"src/vtx_claw/agent/tools/web.py" = ["RUF012"]
"src/vtx_claw/apps/cli/service.py" = ["E501"]
"src/vtx_claw/apps/cli/utils.py" = ["E501"]
"src/vtx_claw/bus/runtime_events.py" = ["RUF006"]
"src/vtx_claw/channels/base.py" = ["B027", "E501"]
"src/vtx_claw/channels/dingtalk.py" = ["RUF012"]
"src/vtx_claw/channels/email.py" = ["E501"]
"src/vtx_claw/channels/feishu.py" = ["B023", "E501", "RUF002", "RUF003", "RUF012", "SIM102"]
"src/vtx_claw/channels/manager.py" = ["RUF006"]
"src/vtx_claw/channels/matrix.py" = ["E501", "SIM102", "SIM117"]
"src/vtx_claw/channels/msteams.py" = ["RUF001"]
"src/vtx_claw/channels/qq.py" = ["E501", "RUF001"]
"src/vtx_claw/channels/signal.py" = ["B904", "E501", "SIM102"]
"src/vtx_claw/channels/slack.py" = ["E501"]
"src/vtx_claw/channels/telegram.py" = ["E501", "RUF012", "SIM105"]
"src/vtx_claw/channels/websocket.py" = ["E501"]
"src/vtx_claw/channels/wecom.py" = ["RUF001", "RUF002"]
"src/vtx_claw/channels/weixin.py" = ["E501"]
"src/vtx_claw/channels/whatsapp.py" = ["SIM102"]
"src/vtx_claw/cli/commands.py" = ["B904", "E501", "RUF001"]
"src/vtx_claw/cli/gateway.py" = ["B008", "B904"]
"src/vtx_claw/cli/onboard.py" = ["E501", "RUF034", "SIM102"]
"src/vtx_claw/command/builtin.py" = ["E501", "RUF006"]
"src/vtx_claw/config/schema.py" = ["E501", "SIM102"]
"src/vtx_claw/cron/service.py" = ["E501"]
"src/vtx_claw/pairing/store.py" = ["E501"]
"src/vtx_claw/providers/__init__.py" = ["F401"]
"src/vtx_claw/providers/registry.py" = ["E501"]
"src/vtx_claw/sdk/clients.py" = ["RUF012"]
"src/vtx_claw/session/manager.py" = ["SIM102"]
"src/vtx_claw/skills/skill-creator/scripts/init_skill.py" = ["E501"]
"src/vtx_claw/skills/skill-creator/scripts/quick_validate.py" = ["E501"]
"src/vtx_claw/utils/evaluator.py" = ["E501"]
"src/vtx_claw/utils/helpers.py" = ["E501"]
"src/vtx_claw/utils/logging_bridge.py" = ["RUF012"]
"src/vtx_claw/utils/prompt_templates.py" = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
