[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtx_claw"]

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[project]
name = "vtx-claw"
version = "0.1.0"
description = "Messaging gateway for VTX — Telegram, Feishu, Discord, Web UI, cron, sandboxed sub-agents. Uses vtx's ConversationRuntime for LLM, session, and tools."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "vtx-coding-agent",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
vtx-coding-agent = { workspace = true }

[project.scripts]
vtx-claw = "vtx_claw.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"src/vtx_claw/web_ui.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
